<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".gettingvalues">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/image_real_estate_price_predictor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/change_server"
        app:backgroundTint="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bath"
        app:layout_constraintHorizontal_bias="0.596"
        app:layout_constraintStart_toStartOf="@+id/bath"
        app:layout_constraintTop_toBottomOf="@+id/bath"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/price"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="50dp"
        android:text="@string/predict_price"
        app:backgroundTint="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bathspinner"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/bathspinner"
        app:layout_constraintTop_toBottomOf="@+id/bathspinner"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/loc"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/location"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/sqft"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/enter_size"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/loc"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/loc"
        app:layout_constraintTop_toBottomOf="@+id/loc"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/bath"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/bathrooms"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bhk"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/bhk"
        app:layout_constraintTop_toBottomOf="@+id/bhk"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/bhk"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/bhk_s"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/sqft"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/sqft"
        app:layout_constraintTop_toBottomOf="@+id/sqft"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/locspinner"
        android:layout_width="210dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/loc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/loc"
        app:layout_constraintTop_toTopOf="@+id/loc"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/bhkspinner"
        android:layout_width="210dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/bhk"
        app:layout_constraintEnd_toEndOf="@+id/totalsqft"
        app:layout_constraintStart_toStartOf="@+id/totalsqft"
        app:layout_constraintTop_toTopOf="@+id/bhk" />

    <Spinner
        android:id="@+id/bathspinner"
        android:layout_width="210dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/bath"
        app:layout_constraintEnd_toEndOf="@+id/bhkspinner"
        app:layout_constraintStart_toStartOf="@+id/bhkspinner"
        app:layout_constraintTop_toTopOf="@+id/bath" />

    <EditText
        android:id="@+id/totalsqft"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/_550_in_square_feet"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHighlight="@color/black"
        android:textColorLink="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/sqft"
        app:layout_constraintEnd_toEndOf="@+id/locspinner"
        app:layout_constraintStart_toStartOf="@+id/locspinner"
        app:layout_constraintTop_toTopOf="@+id/sqft" />
</androidx.constraintlayout.widget.ConstraintLayout>